--- a/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
@@ -21,21 +21,24 @@
                     </button>
                 </section>
                 <section class="thong-tin">
-                    <a href="@(Model.nguoiTao != null ? "/NguoiDung/Xem/" + Model.nguoiTao.ma : "void(0)")">
-                        <div class="nguoi-dung">
-                            <div class="hinh-dai-dien">
-                                @if (Model.nguoiTao.hinhDaiDien != null)
-                                {
-                                    <img src="/LayTapTin/NguoiDung_HinhDaiDien/@Model.nguoiTao.hinhDaiDien.ma" />    
-                                }
-                                else
-                                {
-                                    <img src="/avatarDefault.png/NguoiDung" />
-                                }
+                    @if (Model.nguoiTao != null)
+                    {
+                        <a href="/NguoiDung/Xem/@Model.nguoiTao.ma">
+                            <div class="nguoi-dung">
+                                <div class="hinh-dai-dien">
+                                    @if (Model.nguoiTao.hinhDaiDien != null)
+                                    {
+                                        <img src="/LayTapTin/NguoiDung_HinhDaiDien/@Model.nguoiTao.hinhDaiDien.ma" />
+                                    }
+                                    else
+                                    {
+                                        <img src="/avatarDefault.png/NguoiDung" />
+                                    }
+                                </div>
+                                <span>@Model.nguoiTao.tenTaiKhoan</span>
                             </div>
-                            <span>@Model.nguoiTao.tenTaiKhoan</span>
-                        </div>
-                    </a>
+                        </a>
+                    }                    
                     <div class="diem-so">
                         <i class="pe-7s-angle-up"></i>
                         <span class="so">5</span>
