--- a/LCTMoodle/Views/BinhLuan/_Item.cshtml
+++ b/LCTMoodle/Views/BinhLuan/_Item.cshtml
@@ -1,4 +1,5 @@
 ﻿@model DTOLayer.BinhLuanDTO
+@using LCTMoodle.LCTHtml
 
 <li data-doi-tuong="muc-binh-luan" class="muc-binh-luan" data-loai-doi-tuong="@Model.loaiDoiTuong">
     <section class="trai">
@@ -8,7 +9,7 @@
     </section>
     <section class="phai">
         <section class="nguoi-dung">
-            <a href="#">@(Model.nguoiTao.ho + " " + Model.nguoiTao.ten)</a>
+            <a href="#">@NguoiDungHtml.link(Model.nguoiTao)</a>
         </section>
         <section class="noi-dung">
             @Model.noiDung
