--- a/LCTMoodle/Views/KhoaHoc/DanhSach.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/DanhSach.cshtml
@@ -22,7 +22,7 @@
         <section class="tieu-de">
             Tìm kiếm khóa học
         </section>
-        <section class="noi-dung khung-khoa-hoc">
+        <section class="noi-dung">
             <section id="khung_tim" class="khung-tim lct-form">
                 <section class="line">
                     <article style="width: 100%" class="input">
