--- a/LCTMoodle/Views/KhoaHoc/Xem.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Xem.cshtml
@@ -59,6 +59,8 @@
     chucNang.Add("href='/KhoaHoc/ChuongTrinh/" + Model.ma + "'");
     chucNang.Add("Bảng điểm khóa học");
     chucNang.Add("href='/KhoaHoc/Tao-BangDiem/" + Model.ma + "'");
+    chucNang.Add("Xem điểm khóa học");
+    chucNang.Add("href='/KhoaHoc/Xem-BangDiem/" + Model.ma + "'");
 
     ViewData["ChucNang"] = chucNang;
 }
