--- a/LCTMoodle/Views/BaiVietBaiTap/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiTap/_Item.cshtml
@@ -1,4 +1,5 @@
 ﻿@model DTOLayer.BaiVietBaiTapDTO
+@using LCTMoodle.LCTHtml
 
 <li data-doi-tuong="muc-bai-viet" class="muc-bai-viet" data-ma="@Model.ma">
     <section class="khung-bai-viet">
@@ -10,7 +11,7 @@
             </section>
             <section class="phai">
                 <section class="nguoi-dung">
-                    <a href="#">@(Model.nguoiTao.ho + " " + Model.nguoiTao.ten)</a>
+                    <a href="#">@NguoiDungHtml.link(Model.nguoiTao)</a>
                 </section>
                 <section class="bai-viet">
                     <section class="thoi-gian">                        
