--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -33,8 +33,8 @@
     @RenderSection("Styles", false)
 </head>
 <body class="tai">
-    <article class="bieu-tuong-tai">
-        Đang tải
+    <article data-doi-tuong="bieu-tuong-tai_page" class="bieu-tuong-tai-lct bieu-tuong-tai-lct_page">
+        <i></i><i></i><i></i><i></i><i></i><i></i>
     </article>
     <article class="khung">
         <!-- Header -->
