--- a/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
@@ -40,9 +40,9 @@
                         </a>
                     }                    
                     <div class="diem-so">
-                        <i class="pe-7s-angle-up"></i>
+                        <i class="arrow-up"></i>
                         <span class="so">5</span>
-                        <i class="pe-7s-angle-down"></i>
+                        <i class="arrow-down"></i>
                     </div>
                     <div class="thoi-gian">@Model.thoiDiemTao</div>
                 </section>
