--- a/LCTMoodle/Views/HoiDap/_Item_CauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Item_CauHoi.cshtml
@@ -1,72 +1,73 @@
 ﻿@model DTOLayer.CauHoiDTO
+@{
+    int voteDiem = (int)ViewData["VoteDiem"];
+}
 
 @if (Model != null)
 {
-<article class="muc-hoi-dap cau-hoi">
+    <article class="muc-hoi-dap cau-hoi" data-doi-tuong="cau-hoi" data-ma="@Model.ma">
 
-    <section class="khung-chuc-nang-lct">
+        <section class="khung-chuc-nang-lct">
+            <ul data-doi-tuong="cauhoi-@Model.ma">
+                <li>
+                    <a data-chuc-nang="sua-cau-hoi">Sửa câu hỏi</a>
+                </li>
+                <li>
+                    <a data-chuc-nang="xoa-cau-hoi">Xóa câu hỏi</a>
+                </li>
+            </ul>
+            <button data-chuc-nang="tat-mo" data-mo-doi-tuong="cauhoi-@Model.ma">
+                <i class="pe-7f-config"></i>
+            </button>
 
-        <ul data-doi-tuong="cauhoi-@Model.ma">
-            <li>
-                <a data-chuc-nang="sua-cau-hoi">Sửa câu hỏi</a>
-            </li>
-            <li>
-                <a data-chuc-nang="xoa-cau-hoi">Xóa câu hỏi</a>
-            </li>
-        </ul>
+        </section>
 
-        <button data-chuc-nang="tat-mo" data-mo-doi-tuong="cauhoi-@Model.ma">
-            <i class="pe-7f-config"></i>
-        </button>
-
-    </section>
-
-    <section class="thong-tin">
-        @if (Model.nguoiTao != null)
+        <section class="thong-tin">
+            @if (Model.nguoiTao != null)
         {
-            <a href="/NguoiDung/Xem/@Model.nguoiTao.ma">
-                <div class="nguoi-dung">
-                    <div class="hinh-dai-dien">
-                        @if (Model.nguoiTao.hinhDaiDien != null)
+        <a href="/NguoiDung/Xem/@Model.nguoiTao.ma">
+            <div class="nguoi-dung">
+                <div class="hinh-dai-dien">
+                    @if (Model.nguoiTao.hinhDaiDien != null)
                         {
-                            <img src="/LayTapTin/NguoiDung_HinhDaiDien/@Model.nguoiTao.hinhDaiDien.ma" />
+                        <img src="/LayTapTin/NguoiDung_HinhDaiDien/@Model.nguoiTao.hinhDaiDien.ma" />
                         }
                         else
                         {
-                            <img src="/avatarDefault.png/NguoiDung" />
+                        <img src="/avatarDefault.png/NguoiDung" />
                         }
-                    </div>
-                    <span>@Model.nguoiTao.tenTaiKhoan</span>
                 </div>
-            </a>
+                <span>@Model.nguoiTao.tenTaiKhoan</span>
+            </div>
+        </a>
         }
-        <div class="diem-so">
-            <i class="pe-7s-angle-up"></i>
-            <span class="so">5</span>
-            <i class="pe-7s-angle-down"></i>
-        </div>
+            <div class="diem-so" data-doi-tuong="diem-so-@Model.ma" data-nguoi-dung-vote-diem="@voteDiem">
+                <i class="arrow-up" data-chuc-nang="cong-diem"></i>
+                <span class="so" id="diem_so">@Model.diem</span>
+                <i class="arrow-down" data-chuc-nang="tru-diem"></i>
+            </div>
 
-        <div class="thoi-gian">@Model.thoiDiemTao</div>
-    </section>
+            <div class="thoi-gian">@Model.thoiDiemTao</div>
+        </section>
 
-    <section class="chi-tiet">
+        <section class="chi-tiet">
 
-        <div class="tieu-de">@Model.tieuDe</div>
+            <div class="tieu-de">@Model.tieuDe</div>
 
-        <div class="noi-dung noi-dung-ckeditor">
-            @Html.Raw(Model.noiDung)
-        </div>
+            <div class="noi-dung noi-dung-ckeditor">
+                @Html.Raw(Model.noiDung)
+            </div>
 
-        @if (Model.chuDe != null)
+            @if (Model.chuDe != null)
         {
-            <ul class="chu-de">
-                <li>
-                    <a href="#">@Model.chuDe.ten</a>
-                </li> 
-            </ul>
+        <ul class="chu-de">
+            <li>
+                <a href="#">@Model.chuDe.ten</a>
+            </li>
+        </ul>
         }
-        
-    </section>
 
-</article>
+        </section>
+
+    </article>
 }
